Update/fix сode readability
fix errors

--- a/homeworks/yehor.honcharenko_NOcode-developer/GamesProject/style.css
+++ b/homeworks/yehor.honcharenko_NOcode-developer/GamesProject/style.css
@@ -55,7 +55,7 @@ p {
   font-size: 22px;
   font-weight: 400;
   line-height: 32px;
-  margin: 16 0 0 0;
+  margin-top: 16px;
 }
 
 a {
